src/types/tests/snapshots/tgbot__types__tests__payment__affiliate_info.snap
---
source: src/types/tests/payment.rs
expression: expected_struct.clone()
---
{
  "amount": 1,
  "commission_per_mille": 1
}
