src/types/tests/snapshots/tgbot__types__tests__payment__answer_pre_checkout_query-2.snap
---
source: src/types/tests/payment.rs
expression: actual_data
---
{
  "error_message": "msg",
  "ok": false,
  "pre_checkout_query_id": "query-id"
}
