src/types/tests/snapshots/tgbot__types__tests__payment__answer_pre_checkout_query.snap
---
source: src/types/tests/payment.rs
expression: actual_data
---
{
  "ok": true,
  "pre_checkout_query_id": "query-id"
}
