src/types/tests/snapshots/tgbot__types__tests__payment__answer_shipping_query-2.snap
---
source: src/types/tests/payment.rs
expression: actual_data
---
{
  "error_message": "msg",
  "ok": false,
  "shipping_query_id": "id"
}
