src/types/tests/snapshots/tgbot__types__tests__payment__answer_shipping_query.snap
---
source: src/types/tests/payment.rs
expression: actual_data
---
{
  "ok": true,
  "shipping_options": [],
  "shipping_query_id": "id"
}
