src/types/tests/snapshots/tgbot__types__tests__payment__create_invoice_link.snap
---
source: src/types/tests/payment.rs
expression: actual_data
---
{
  "currency": "GEL",
  "description": "product-description",
  "payload": "payload",
  "prices": [
    {
      "amount": 100,
      "label": "price-label"
    }
  ],
  "title": "product-name"
}
