src/types/tests/snapshots/tgbot__types__tests__payment__edit_user_star_subscription.snap
---
source: src/types/tests/payment.rs
expression: actual_data
---
{
  "is_canceled": false,
  "telegram_payment_charge_id": "id",
  "user_id": 1
}
