src/types/tests/snapshots/tgbot__types__tests__payment__labeled_price.snap
---
source: src/types/tests/payment.rs
expression: "LabeledPrice::new(145, \"price label\")"
---
{
  "amount": 145,
  "label": "price label"
}
